language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_with_argument_in_first_position_3.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  [1, 2, 3] |> wibble()\n}\n\nfn wibble(a) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  [1, 2, 3] |> wibble()
               ↑       
}

fn wibble(a) { todo }


----- AFTER ACTION

pub fn main() {
  wibble([1, 2, 3])
}

fn wibble(a) { todo }
