language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_with_function_producing_another_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1 |> wibble(2)\n}\n\nfn wibble(c) -> fn(a) -> Nil {\n  fn(_) { Nil }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  1 |> wibble(2)
       ↑        
}

fn wibble(c) -> fn(a) -> Nil {
  fn(_) { Nil }
}


----- AFTER ACTION

pub fn main() {
  wibble(2)(1)
}

fn wibble(c) -> fn(a) -> Nil {
  fn(_) { Nil }
}
