language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_with_hole_in_first_position.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> map(_, todo)\n}\n\nfn map(list: List(a), fun: fn(a) -> b) -> List(b) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  [1, 2, 3]
  ↑        
  |> map(_, todo)
}

fn map(list: List(a), fun: fn(a) -> b) -> List(b) { todo }


----- AFTER ACTION

pub fn main() {
  map([1, 2, 3], todo)
}

fn map(list: List(a), fun: fn(a) -> b) -> List(b) { todo }
