language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_with_hole_not_in_first_position.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  fn(a) { todo }\n  |> map([1, 2, 3], _)\n}\n\nfn map(list: List(a), fun: fn(a) -> b) -> List(b) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  fn(a) { todo }
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  |> map([1, 2, 3], _)
▔▔▔▔▔↑                
}

fn map(list: List(a), fun: fn(a) -> b) -> List(b) { todo }


----- AFTER ACTION

pub fn main() {
  map([1, 2, 3], fn(a) { todo })
}

fn map(list: List(a), fun: fn(a) -> b) -> List(b) { todo }
