language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_function_call_works_with_labelled_argument_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  [1, 2, 3] |> wibble(wobble:, woo: _)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  [1, 2, 3] |> wibble(wobble:, woo: _)
               ↑                      
}


----- AFTER ACTION

pub fn main() {
  wibble(wobble:, woo: [1, 2, 3])
}
