language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_int_has_nicely_separated_digits.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() { 0b100101101011010000111 }"
---
----- BEFORE ACTION
pub fn main() { 0b100101101011010000111 }
                ↑                        


----- AFTER ACTION
pub fn main() { 1_234_567 }
