language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_on_first_step_of_pipeline.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(wobble, woo) |> wobble\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(wobble, woo) |> wobble
  ↑                            
}


----- AFTER ACTION

pub fn main() {
  wobble |> wibble(woo) |> wobble
}
